{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 63,
  "lineage": "4392b9d6-1967-4da6-42ae-1ed16f352be0",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-example/c7ba0810e0a233b4",
            "arn_suffix": "app/ex-example/c7ba0810e0a233b4",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ex-example-1952790105.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-example/c7ba0810e0a233b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ex-example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0009ad45303a2014c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0359684a66025bc45"
              },
              {
                "subnet_id": "subnet-0e4fd12fc9627058e"
              },
              {
                "subnet_id": "subnet-0fbad813887fb0147"
              }
            ],
            "subnets": [
              "subnet-0359684a66025bc45",
              "subnet-0e4fd12fc9627058e",
              "subnet-0fbad813887fb0147"
            ],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0564cf59c5a053cdf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:listener/app/ex-example/c7ba0810e0a233b4/8af4976719ef1220",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117103525414200000003/4e03ac88cad1a990",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:listener/app/ex-example/c7ba0810e0a233b4/8af4976719ef1220",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-example/c7ba0810e0a233b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117103525414200000003/4e03ac88cad1a990",
            "arn_suffix": "targetgroup/tf-20240117103525414200000003/4e03ac88cad1a990",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117103525414200000003/4e03ac88cad1a990",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20240117103525414200000003",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group/sg-0009ad45303a2014c",
            "description": "Security group for ex-example application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0009ad45303a2014c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ex-example-20240117103525415900000004",
            "name_prefix": "ex-example-",
            "owner_id": "871794273757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group-rule/sgr-0ab02ebd1d146b89a",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab02ebd1d146b89a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0009ad45303a2014c",
            "security_group_rule_id": "sgr-0ab02ebd1d146b89a",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group-rule/sgr-073a7d5579a2af0a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-073a7d5579a2af0a2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0009ad45303a2014c",
            "security_group_rule_id": "sgr-073a7d5579a2af0a2",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:network-acl/acl-00023b618e1b86852",
            "default_network_acl_id": "acl-00023b618e1b86852",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00023b618e1b86852",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "871794273757",
            "subnet_ids": [
              "subnet-0359684a66025bc45",
              "subnet-051eb55736f69f9eb",
              "subnet-08de48e2f6535037d",
              "subnet-0d80ec2f2fced5c7b",
              "subnet-0e4fd12fc9627058e",
              "subnet-0fbad813887fb0147"
            ],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-0fe67bfd085e0e9c1",
            "default_route_table_id": "rtb-0fe67bfd085e0e9c1",
            "id": "rtb-0fe67bfd085e0e9c1",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group/sg-048e217a471f8c7ea",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-048e217a471f8c7ea",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "871794273757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054faaeba77b834c1",
            "association_id": "eipassoc-0d4539395120624cd",
            "domain": "vpc",
            "id": "eipalloc-054faaeba77b834c1",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-05c2a420f2410d1fc",
            "private_dns": "ip-10-0-48-251.eu-west-1.compute.internal",
            "private_ip": "10.0.48.251",
            "public_dns": "ec2-52-17-81-183.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.81.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:internet-gateway/igw-09a60fba6c33c6525",
            "id": "igw-09a60fba6c33c6525",
            "owner_id": "871794273757",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054faaeba77b834c1",
            "association_id": "eipassoc-0d4539395120624cd",
            "connectivity_type": "public",
            "id": "nat-0005303f963a65aad",
            "network_interface_id": "eni-05c2a420f2410d1fc",
            "private_ip": "10.0.48.251",
            "public_ip": "52.17.81.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4fd12fc9627058e",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-045064a8499eb2b351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0005303f963a65aad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045064a8499eb2b35",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09a60fba6c33c6525",
            "id": "r-rtb-04d42fbe2c53833b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d42fbe2c53833b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-045064a8499eb2b35",
            "id": "rtb-045064a8499eb2b35",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0005303f963a65aad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-04d42fbe2c53833b8",
            "id": "rtb-04d42fbe2c53833b8",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a60fba6c33c6525",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0604cf18f59eac6fc",
            "route_table_id": "rtb-045064a8499eb2b35",
            "subnet_id": "subnet-08de48e2f6535037d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b33b127af6140c",
            "route_table_id": "rtb-045064a8499eb2b35",
            "subnet_id": "subnet-051eb55736f69f9eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27ffdb582c2cd9a",
            "route_table_id": "rtb-045064a8499eb2b35",
            "subnet_id": "subnet-0d80ec2f2fced5c7b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04361d22ecd38755f",
            "route_table_id": "rtb-04d42fbe2c53833b8",
            "subnet_id": "subnet-0e4fd12fc9627058e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a287c85471e1bae",
            "route_table_id": "rtb-04d42fbe2c53833b8",
            "subnet_id": "subnet-0fbad813887fb0147"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caadbf236f9d001f",
            "route_table_id": "rtb-04d42fbe2c53833b8",
            "subnet_id": "subnet-0359684a66025bc45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-08de48e2f6535037d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de48e2f6535037d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-051eb55736f69f9eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051eb55736f69f9eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0d80ec2f2fced5c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80ec2f2fced5c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0e4fd12fc9627058e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4fd12fc9627058e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0fbad813887fb0147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbad813887fb0147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0359684a66025bc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0359684a66025bc45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0564cf59c5a053cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:vpc/vpc-0564cf59c5a053cdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00023b618e1b86852",
            "default_route_table_id": "rtb-0fe67bfd085e0e9c1",
            "default_security_group_id": "sg-048e217a471f8c7ea",
            "dhcp_options_id": "dopt-077953acc95cdec1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0564cf59c5a053cdf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe67bfd085e0e9c1",
            "owner_id": "871794273757",
            "tags": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-example",
              "Name": "ex-example",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}